# osm-geo-mapper

./: .gitignore  Cargo.toml  README.md  log4rs.yaml
benches/: operations.rs
osm-geo-mapper-macros/: Cargo.toml  LICENSE  README.md
osm-geo-mapper-macros/src/: lib.rs
resources/: ottawa.xml.geojson
src/: features.rs  geojson_parser.rs  interface.rs  lib.rs  main.rs  nominatim.rs  openstreetmap.rs  operations.rs  osm_parser.rs  osmtogeojson.rs  pbf_parser.rs  viewer.rs
src/features/: aerialway_feature.rs  aeroway_feature.rs  amenity_feature.rs  barrier_feature.rs  boundary_feature.rs  building_feature.rs  craft_feature.rs  emergency_feature.rs  geological_feature.rs  healthcare_feature.rs  highway_feature.rs  historic_feature.rs  landuse_feature.rs  leisure_feature.rs  man_made_feature.rs  military_feature.rs  natural_feature.rs  office_feature.rs  place_feature.rs  power_feature.rs  public_transport_feature.rs  railway_feature.rs  route_feature.rs  shop_feature.rs  sport_feature.rs  telecom_feature.rs  tourism_feature.rs  water_feature.rs  waterway_feature.rs
src/operations/: line_string_operations.rs  point_operations.rs  polygon_operations.rs
src/viewer/: actions.rs  cli.rs  details.rs  input.rs  theme.rs  viewport.rs
tests/: lib_tests.rs
