[package]
name = "osm-geo-mapper"
version = "0.8.0"
authors = ["Edouard Poitras <edouardpoitras@gmail.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"
repository = "https://github.com/edouardpoitras/osm-geo-mapper"
homepage = "https://crates.io/crates/osm-geo-mapper"
description = """
Navigate OpenStreetMap data in the terminal.
"""
keywords = ["openstreetmap", "osm", "geojson"]
include = ["src/", "LICENSE", "README.md"]

[lib]
name = "osm_geo_mapper"
path = "src/lib.rs"

[[bin]]
name = "osm-geo-mapper"
path = "src/main.rs"

[profile.release]
#debug = true # Generate debug symbols so we can profile the code and use tools like flamegraph.
# Sacrifice compile time and execution speed to generate smaller binary size (can get from ~11MB to ~1MB as of June 2021):
#opt-level = 'z' # Optimize for size.
codegen-units = 1 # Reduce parallel code generation units to increase potential size optimizations - 11MB to 8MB as of June 2021.
lto = true # Enable link time optimization which can remove binary bloat - 8MB to 6MB as of June 2021.
# Other options:
# 1) Use the strip command post-build to strip out unnecessary symbols - Saves ~35% binary size as of June 2021.
# 2) Use the upx command to pack the binary - Saves ~65% binary size as of June 2021.

[dependencies]
tui = { version = "0.13.0", default-features = false, features = ["crossterm"] }
crossterm = "0.18.2"
noise = "0.6.0"
geo-types = "0.6.0"
geojson = { version = "0.19.0", features = ["geo-types"] }
geo = "0.14.0"
log = "0.4.8"
#osm-geo-mapper-macros = "0.2.1"
osm-geo-mapper-macros = { path = "osm-geo-mapper-macros" }
osmpbfreader = "0.13.4"
paste = "1.0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
structopt = "0.3.15"
reqwest = { version = "0.10.6", features = ["json", "blocking"] }
uuid = { version = "0.8.1", features = ["v4"] }
log4rs = "0.13.0"

[dev-dependencies]
criterion = "0.3.3"

[[bench]]
name = "operations"
path = "benches/operations.rs"
harness = false
